fixed personal plan text position on mobile phones. Added dynamic behaviour for special offer badge

--- a/resources/front/css/changes.css
+++ b/resources/front/css/changes.css
@@ -252,6 +252,13 @@ input[type=number] {
     border-radius: 10px;
 }
 
+.plan.personal-plan .discount{
+    display: none;
+}
+
+.plan.personal-plan.active .discount{
+    display: flex;
+}
 
 /*mobile*/
 
